[13.0][IMP] role_policy : add group by on view modifier rules

--- a/role_policy/views/view_modifier_rule_views.xml
+++ b/role_policy/views/view_modifier_rule_views.xml
@@ -12,6 +12,14 @@
                     name="inactive"
                     domain="[('active', '=', False)]"
                 />
+                <group expand="0" string="Group By...">
+                    <filter
+                        name="role"
+                        string="Role"
+                        domain="[]"
+                        context="{'group_by':'role_id'}"
+                    />
+                </group>
             </search>
         </field>
     </record>
